Avoid code duplications. Remove a redundant unused method. Override hashCode() where equals() is overriden. Avoid non-ASCII characters in sources. Minor cosmetic changes